--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "doctrine/dbal": "^4.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "phiki/phiki": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
